--- a/app/src/main/res/layout/fragment_book_details.xml
+++ b/app/src/main/res/layout/fragment_book_details.xml
@@ -278,10 +278,11 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerview_comments"
                     android:layout_width="match_parent"
-                    android:layout_height="400dp"
+                    android:layout_height="wrap_content"
                     android:divider="@color/black"
                     android:dividerHeight="1dp"
                     android:layout_marginBottom="20dp"
+                    tools:itemCount="6"
                     tools:listitem="@layout/comment_item"
                     />
 
