--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -2,6 +2,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:backgroundTint="?attr/backgroundColor"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,21 +22,40 @@
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-/>
+        />
 
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_image_select"
+    <FrameLayout
+        android:id="@+id/profile_image_select_container"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="28dp"
-        android:clickable="true"
-        android:focusable="true"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_edit_profile"
-        android:contentDescription="@string/textview_select_avatar"
-        />
+        >
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image_select"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="28dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:contentDescription="@string/textview_select_avatar"
+            tools:src="@drawable/avatar2"
+            android:layout_gravity="bottom|center_horizontal"
+            />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/edit_avatar_icon_imageview"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/baseline_edit_24"
+            android:layout_gravity="top|end"
+            />
+    </FrameLayout>
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_username"
@@ -44,7 +64,7 @@
         android:layout_marginTop="22dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@id/profile_image_select"
+        app:layout_constraintTop_toBottomOf="@id/profile_image_select_container"
         app:shapeAppearanceOverlay="@style/RoundedEditText"
         app:errorEnabled="true"
         app:boxStrokeColor="@color/text_input_box_stroke_color"
@@ -105,6 +125,7 @@
             android:visibility="gone"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"/>
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -175,6 +196,7 @@
             android:visibility="gone"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"/>
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -210,5 +232,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_confirm_edit" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
