--- a/app/src/main/res/layout/collection_item.xml
+++ b/app/src/main/res/layout/collection_item.xml
@@ -4,55 +4,53 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/collection_container"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:selectableItemBackground"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp">
+    android:background="?android:selectableItemBackground" >
 
-    <ImageView
-        android:id="@+id/collection_thumbnail_imageview"
-        android:layout_width="200sp"
-        android:layout_height="250sp"
-        android:scaleType="centerCrop"
+    <FrameLayout
+        android:id="@+id/collection_cover_container"
+        android:layout_width="200dp"
+        android:layout_height="250dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/content_description_collection_thumbnail"
-        tools:src="@drawable/image_not_available"
-        />
+        app:layout_constraintTop_toTopOf="parent" >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/collection_name_visibility_constraintLayout"
-        android:layout_width="200sp"
-        android:paddingStart="18dp"
-        android:paddingEnd="15dp"
-        android:paddingTop="2dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/collection_thumbnail_imageview"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:id="@+id/collection_name_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="@string/textview_collection_name_placeholder"
+        <ImageView
+            android:id="@+id/collection_thumbnail_imageview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:contentDescription="@string/content_description_collection_thumbnail"
+            tools:src="@drawable/image_not_available"
             />
 
         <ImageView
             android:id="@+id/collection_visibility_icon"
-            android:layout_width="30sp"
-            android:layout_height="30sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_gravity="top|end"
             android:contentDescription="@string/content_description_collection_visibility"
             tools:src="@drawable/baseline_lock_outline_24"
             />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/collection_name_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/collection_cover_container"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="@string/textview_collection_name_placeholder"
+        />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
