--- a/app/src/main/res/layout/fragment_tab_search_books.xml
+++ b/app/src/main/res/layout/fragment_tab_search_books.xml
@@ -9,8 +9,6 @@
 
     >
 
-
-    <!-- TODO isVisible solo quando carica, da vedere -->
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/progressindicator_search_books"
         android:layout_width="match_parent"
@@ -72,6 +70,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="45dp"
         android:visibility="gone"
         tools:visibility="visible" >
 
